akash-wt.Ping.dfa29d287dc2185a401447b0e6b773b3fed6c51a
Running as unit: run-p1449817-i14029925.scope; invocation ID: 741099fd42744b7aa51a6c64a6591016
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.174
    Checking cfg-if v1.0.1
   Compiling autocfg v1.5.0
    Checking itoa v1.0.15
    Checking smallvec v1.15.1
    Checking bytes v1.10.1
   Compiling version_check v0.9.5
   Compiling parking_lot_core v0.9.11
    Checking pin-project-lite v0.2.16
   Compiling lock_api v0.4.13
    Checking futures-core v0.3.31
   Compiling shlex v1.3.0
    Checking scopeguard v1.2.0
   Compiling cc v1.2.31
    Checking stable_deref_trait v1.2.0
   Compiling typenum v1.18.0
   Compiling generic-array v0.14.7
    Checking futures-sink v0.3.31
   Compiling quote v1.0.40
    Checking fnv v1.0.7
    Checking http v1.3.1
   Compiling syn v2.0.104
    Checking once_cell v1.21.3
   Compiling num-traits v0.2.19
   Compiling serde v1.0.219
    Checking bitflags v2.9.1
    Checking slab v0.4.10
    Checking futures-task v0.3.31
    Checking base64 v0.22.1
    Checking signal-hook-registry v1.4.5
    Checking socket2 v0.6.0
    Checking parking_lot v0.12.4
    Checking mio v1.0.4
    Checking memchr v2.7.5
    Checking pin-utils v0.1.0
   Compiling vcpkg v0.2.15
   Compiling pkg-config v0.3.32
    Checking percent-encoding v2.3.1
    Checking writeable v0.6.1
    Checking crypto-common v0.1.6
    Checking litemap v0.8.0
    Checking http-body v1.0.1
   Compiling openssl-sys v0.9.109
    Checking tracing-core v0.1.34
   Compiling httparse v1.10.1
   Compiling ident_case v1.0.1
    Checking equivalent v1.0.2
    Checking hashbrown v0.15.4
   Compiling icu_normalizer_data v2.0.0
    Checking ryu v1.0.20
   Compiling strsim v0.11.1
   Compiling icu_properties_data v2.0.1
    Checking try-lock v0.2.5
    Checking httpdate v1.0.3
    Checking tower-service v0.3.3
    Checking atomic-waker v1.1.2
    Checking want v0.3.1
    Checking form_urlencoded v1.2.1
    Checking futures-channel v0.3.31
   Compiling getrandom v0.3.3
    Checking indexmap v2.10.0
   Compiling serde_json v1.0.142
    Checking foreign-types-shared v0.1.1
   Compiling openssl v0.10.73
    Checking foreign-types v0.3.2
    Checking num-integer v0.1.46
    Checking inout v0.1.4
    Checking sync_wrapper v1.0.2
    Checking byteorder v1.5.0
   Compiling native-tls v0.2.14
    Checking ipnet v2.11.0
   Compiling either v1.15.0
   Compiling heck v0.5.0
    Checking zeroize v1.8.1
   Compiling pq-sys v0.7.2
    Checking num-bigint v0.4.6
    Checking cipher v0.4.4
    Checking http-body-util v0.1.3
    Checking openssl-probe v0.1.6
    Checking utf8_iter v1.0.4
    Checking log v0.4.27
    Checking mime v0.3.17
    Checking iana-time-zone v0.1.63
    Checking blowfish v0.9.1
    Checking subtle v2.6.1
    Checking tower-layer v0.3.3
   Compiling thiserror v2.0.12
    Checking bcrypt v0.17.0
    Checking uuid v1.17.0
    Checking block-buffer v0.10.4
   Compiling uncased v0.9.10
   Compiling toml_datetime v0.6.11
   Compiling time-core v0.1.4
    Checking iri-string v0.7.8
    Checking powerfmt v0.2.0
   Compiling num-conv v0.1.0
   Compiling winnow v0.7.12
   Compiling cfg_aliases v0.2.1
    Checking dotenvy v0.15.7
   Compiling time-macros v0.2.22
   Compiling nix v0.30.1
    Checking deranged v0.4.0
    Checking digest v0.10.7
   Compiling synstructure v0.13.2
   Compiling darling_core v0.20.11
   Compiling diesel_table_macro_syntax v0.2.0
    Checking rustls-pki-types v1.12.0
    Checking aho-corasick v1.1.3
   Compiling ring v0.17.14
    Checking encoding_rs v0.8.35
    Checking regex-syntax v0.8.5
    Checking sha1_smol v1.0.1
    Checking cpufeatures v0.2.17
    Checking time v0.3.41
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling tokio-macros v2.5.0
    Checking tokio v1.47.1
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling futures-macro v0.3.31
   Compiling serde_derive v1.0.219
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
   Compiling tracing-attributes v0.1.30
    Checking zerotrie v0.2.2
   Compiling darling_macro v0.20.11
    Checking futures-util v0.3.31
    Checking zerovec v0.11.4
   Compiling darling v0.20.11
   Compiling openssl-macros v0.1.1
    Checking tracing v0.1.41
    Checking tinystr v0.8.1
    Checking potential_utf v0.1.2
    Checking icu_collections v2.0.0
    Checking icu_locale_core v2.0.0
   Compiling dsl_auto_type v0.1.3
    Checking icu_provider v2.0.0
   Compiling thiserror-impl v2.0.12
    Checking icu_normalizer v2.0.0
    Checking icu_properties v2.0.1
   Compiling diesel_derives v2.2.7
    Checking tokio-util v0.7.15
    Checking tokio-native-tls v0.3.1
    Checking h2 v0.4.11
    Checking idna_adapter v1.2.1
    Checking tower v0.5.2
    Checking idna v1.0.3
    Checking combine v4.6.7
    Checking url v2.5.4
    Checking tower-http v0.6.6
   Compiling toml_edit v0.22.27
    Checking regex-automata v0.4.9
    Checking hyper v1.6.0
    Checking chrono v0.4.41
    Checking serde_urlencoded v0.7.1
    Checking sha1 v0.10.6
    Checking hyper-util v0.1.16
   Compiling proc-macro-crate v3.3.0
    Checking diesel v2.2.12
    Checking getrandom v0.2.16
    Checking headers-core v0.3.0
    Checking untrusted v0.9.0
   Compiling anyhow v1.0.99
    Checking headers v0.4.1
   Compiling poem-derive v3.1.12
    Checking hyper-tls v0.6.0
    Checking reqwest v0.12.23
    Checking rfc7239 v0.1.3
    Checking regex v1.11.1
    Checking simple_asn1 v0.6.3
    Checking pem v3.0.5
    Checking wildmatch v2.4.0
    Checking poem v3.1.12
    Checking jsonwebtoken v9.3.1
    Checking redis v0.32.5
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.12/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
